# graphcoding

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.graphcoding/: config.json  graph.jsonl
docs/: agents.md  core-concepts.md  drift.md  faq.md  graphcontext.md  lifecycle.md  manifesto.md  memory-architecture.md  migrating-existing-repos.md  playbooks.md  scaling.md  starting-new-projects.md  the-flow.md  whole-system-graph.md
skill/graphcoding/: SKILL.md
src/graphcoding/: __init__.py  cli.py  context.py  drift.py  health.py  hooks.py  scan.py  store.py  sync.py
templates/: CLAUDE.md.snippet  cursorrules.snippet  github-action-drift.yml
tests/: test_e2e.py
