[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphcoding"
version = "0.3.0"
description = "Draw the graph of the system you want — then code until the repo matches. Future files and scheduled deletions are graph data; a drift gate blocks commits until code and declared design converge."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mosab Sayyed" }]
keywords = [
  "knowledge-graph", "ai-agents", "llm", "code-graph", "methodology",
  "developer-tools", "claude", "copilot", "drift-detection",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/mosabsayyed/graphcoding"
Documentation = "https://github.com/mosabsayyed/graphcoding/tree/main/docs"
Issues = "https://github.com/mosabsayyed/graphcoding/issues"

[project.scripts]
graphcoding = "graphcoding.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
